--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,75 @@
-$purple: #8718e2;
+@use 'colors';
+@use 'mixins';
 
-h1 {
-  color: $purple;
+body {
+  font-family: 'Inter';
+  font-size: 1rem;
+  color: colors.$dark;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  overflow-y: hidden;
 }
 
-::placeholder {
-  font-size: 2rem;
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .logo {
+    width: 5rem;
+    margin-bottom: 1rem;
+  }
+  
+  h1 {
+    font-size: 4rem;
+    font-weight: 900;
+  }
+  
+  nav {
+    display: flex;
+    gap: 2rem;
+    margin: 2rem 0 4rem 0;
+  
+    .link {
+      @include mixins.link(colors.$main);
+    }
+  }
+}
+
+main {
+  width: 100%;
+  max-width: 48rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 4rem;
+
+  p {
+    margin: 1em 0;
+  }
+
+  .shellBlock {
+    @include mixins.shellBlock(colors.$dark);
+  }
+}
+
+.modal {
+  position: absolute;
+  bottom: -4rem;
+  padding: 1em 2em;
+  border-radius: .5rem;
+  font-weight: 500;
+  background-color: colors.$green;
+  box-shadow: 0 1rem 2rem rgba(colors.$green, .3);
+  cursor: not-allowed;
+  opacity: 0;
+  transition: .5s ease-in-out;
+
+  &.visible {
+    bottom: 4rem;
+    opacity: 1;
+    transition: .5s cubic-bezier(0, 0, .2, 1.5);
+  }
 }
